skeleton dos widgets

--- a/src/app/home/widgets/cassino/cassino.component.css
+++ b/src/app/home/widgets/cassino/cassino.component.css
@@ -279,6 +279,41 @@
     border-bottom-right-radius: 5px;
 }
 
+.loading-listagem .slider {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+}
+
+.loading-listagem .slider .title {
+    display: flex;
+    justify-content: space-between;
+    height: 27px;
+    margin: 10px 0;
+}
+
+.loading-listagem .slider .title .left {
+    height: 27px;
+    width: 200px;
+}
+
+.loading-listagem .slider .title .right {
+    height: 27px;
+    width: 70px;
+}
+
+.loading-listagem .slider .itens {
+    display: flex;
+    overflow: hidden;
+    gap: 20px;
+}
+
+.loading-listagem .slider .itens div {
+    min-width: 216px;
+    height: 155px;
+    border-radius: 5px;
+}
+
 @media only screen and (max-width: 1024px) {
     .wall-container {
         height: -webkit-fill-available;
@@ -313,6 +348,16 @@
         max-width: 200px;
         margin-top: 10px;
         margin-right: 10px;
+    }
+
+    .loading-listagem .slider .itens {
+        gap: 10px;
+    }
+
+    .loading-listagem .slider .itens div {
+        min-width: 200px;
+        height: 144px;
+        border-radius: 5px;
     }
 
     .ver-todos a {
@@ -436,6 +481,12 @@
         min-width: 170px;
     }
 
+    .loading-listagem .slider .itens div {
+        min-width: 170px;
+        height: 122px;
+        border-radius: 5px;
+    }
+
     .game-tile .game-button-play,
     .game-tile .game-button-demo {
         height: 35px !important;
@@ -447,5 +498,11 @@
     .game-tile-inline,
     .game-tile-inline-destaque {
         min-width: 140px;
+    }
+
+    .loading-listagem .slider .itens div {
+        min-width: 140px;
+        height: 100px;
+        border-radius: 5px;
     }
 }
