--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
@@ -168,6 +168,16 @@ owl-carousel-o {
     margin-left: 10px;
 }
 
+.jogos-destaque .jogo .time1 .text-center,
+.jogos-destaque .jogo .time2 .text-center {
+
+    display: block;
+    width: 104px;
+    overflow: hidden;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
+}
+
 .jogos-destaque .jogo .time1 .text-center {
     flex: 1;
 }
@@ -225,6 +235,30 @@ owl-carousel-o {
 span.escudo img {
     height: 32px;
     width: 32px;
+}
+
+.loading-listagem .slider {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+}
+
+.loading-listagem .slider .title {
+    width: 300px;
+    height: 27px;
+    margin: 10px 0;
+}
+
+.loading-listagem .slider .itens {
+    display: flex;
+    overflow: hidden;
+    gap: 10px;
+}
+
+.loading-listagem .slider .itens div {
+    min-width: 340px;
+    height: 170px;
+    border-radius: 5px;
 }
 
 @media only screen and (max-width: 1024px) {
