--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -79,6 +79,7 @@
             />
 
             <div class="games-container">
+                <div class="more-games-fade more-games-fade-left" id="destaques-fade-left"></div>
                 <div class="game-list game-list-inline" #scrollGames id="destaques-scroll" (scroll)="onScroll('destaques')">
                     <app-wall-game-card
                         *ngFor="let game of gamesDestaque"
@@ -90,6 +91,7 @@
                         (openModalLogin)="abrirModalLogin()"
                     />
                 </div>
+                <div class="more-games-fade more-games-fade-right" id="destaques-fade-right" *ngIf="gamesDestaque.length > 2"></div>
             </div>
         </div>
 
@@ -104,6 +106,7 @@
             />
 
             <div class="games-container">
+                <div class="more-games-fade more-games-fade-left" id="crash-fade-left"></div>
                 <div class="game-list game-list-inline" #scrollGames id="crash-scroll" (scroll)="onScroll('crash')">
                     <app-wall-game-card
                         *ngFor="let game of gamesCrash"
@@ -115,6 +118,7 @@
                         (openModalLogin)="abrirModalLogin()"
                     />
                 </div>
+                <div class="more-games-fade more-games-fade-right" id="crash-fade-right" *ngIf="gamesCrash.length > 2"></div>
             </div>
         </div>
 
@@ -129,6 +133,7 @@
             />
 
             <div class="games-container">
+                <div class="more-games-fade more-games-fade-left" id="slot-fade-left"></div>
                 <div class="game-list game-list-inline" #scrollGames id="slot-scroll" (scroll)="onScroll('slot')">
                     <app-wall-game-card
                         *ngFor="let game of gamesSlot"
@@ -140,6 +145,7 @@
                         (openModalLogin)="abrirModalLogin()"
                     />
                 </div>
+                <div class="more-games-fade more-games-fade-right" id="slot-fade-right" *ngIf="gamesSlot.length > 2"></div>
             </div>
         </div>
 
@@ -154,6 +160,7 @@
             />
 
             <div class="games-container">
+                <div class="more-games-fade more-games-fade-left" id="roleta-fade-left"></div>
                 <div class="game-list game-list-inline" #scrollGames id="roleta-scroll" (scroll)="onScroll('roleta')">
                     <app-wall-game-card
                         *ngFor="let game of gamesRoleta"
@@ -165,6 +172,7 @@
                         (openModalLogin)="abrirModalLogin()"
                     />
                 </div>
+                <div class="more-games-fade more-games-fade-right" id="roleta-fade-right" *ngIf="gamesRoleta.length > 2"></div>
             </div>
         </div>
 
@@ -179,6 +187,7 @@
             />
 
             <div class="games-container">
+                <div class="more-games-fade more-games-fade-left" id="mesa-fade-left"></div>
                 <div class="game-list game-list-inline" #scrollGames id="mesa-scroll" (scroll)="onScroll('mesa')">
                     <app-wall-game-card
                         *ngFor="let game of gamesMesa"
@@ -190,6 +199,7 @@
                         (openModalLogin)="abrirModalLogin()"
                     />
                 </div>
+                <div class="more-games-fade more-games-fade-right" id="mesa-fade-right" *ngIf="gamesMesa.length > 2"></div>
             </div>
         </div>
 
@@ -204,6 +214,7 @@
             />
 
             <div class="games-container">
+                <div class="more-games-fade more-games-fade-left" id="raspadinha-fade-left"></div>
                 <div class="game-list game-list-inline" #scrollGames id="raspadinha-scroll" (scroll)="onScroll('raspadinha')">
                     <app-wall-game-card
                         *ngFor="let game of gamesRaspadinha"
@@ -215,6 +226,7 @@
                         (openModalLogin)="abrirModalLogin()"
                     />
                 </div>
+                <div class="more-games-fade more-games-fade-right" id="raspadinha-fade-right" *ngIf="gamesRaspadinha.length > 2"></div>
             </div>
         </div>
 
@@ -229,6 +241,7 @@
             />
 
             <div class="games-container">
+                <div class="more-games-fade more-games-fade-left" id="bingo-fade-left"></div>
                 <div class="game-list game-list-inline" #scrollGames id="bingo-scroll" (scroll)="onScroll('bingo')">
                     <app-wall-game-card
                         *ngFor="let game of gamesBingo"
@@ -240,6 +253,7 @@
                         (openModalLogin)="abrirModalLogin()"
                     />
                 </div>
+                <div class="more-games-fade more-games-fade-right" id="bingo-fade-right" *ngIf="gamesBingo.length > 2"></div>
             </div>
         </div>
     </div>
