--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.css
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.css
@@ -3,9 +3,9 @@
     background-color: var(--header);
     position: relative;
     border-radius: 5px;
-    width: 100%;
-    height: 100%;
+    overflow: hidden; 
 }
+
 .game-tile img {
     position: relative;
     width: 100%;
@@ -59,9 +59,19 @@
     opacity: 0.3;
 }
 
-.info-game {
+/* .info-game {
     border-radius: 0 0 5px 5px;
     padding: 30px 20px 10px;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    color: #fff;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    transition: .300s;
+} */
+
+.info-game {
+    padding: 50px 20px 10px;
     position: absolute;
     width: 100%;
     bottom: 0;
@@ -81,11 +91,19 @@
     text-shadow: 2px 2px 5px black;
 }
 
+/* .info-game label {
+    font-size: 12px;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
+    overflow: hidden;
+} */
+
 .info-game label {
     font-size: 12px;
     text-overflow: ellipsis;
     text-wrap: nowrap;
     overflow: hidden;
+    color: #C8C8C8;
 }
 
 .gameBloqueado {
@@ -145,7 +163,6 @@
     .game-tile-inline {
         min-width: 200px;
         max-width: 200px;
-        min-height: 145px;
     }
 
     .ver-todos a {
@@ -184,6 +201,9 @@
         width: var(--gameTileWidth);
         margin-bottom: 0;
         margin-left: 20px !important;
+
+        min-width: 216px;
+        max-width: 216px;
     }
 
     .game-tile-inline:first-of-type {
@@ -201,7 +221,6 @@
     .game-tile-inline,
     .game-tile-inline-destaque {
         min-width: 170px;
-        min-height: 120px;
     }
 
     .game-tile .game-button-play,
@@ -213,6 +232,6 @@
 @media only screen and (max-width: 400px) {
     .game-tile-inline,
     .game-tile-inline-destaque {
-        min-width: 162px;
+        min-width: 140px;
     }
 }
