--- a/src/app/casino/wall/components/wall-games-search/wall-games-search.component.scss
+++ b/src/app/casino/wall/components/wall-games-search/wall-games-search.component.scss
@@ -14,7 +14,6 @@
         height: 100vh;
 
         background-color: var(--header);
-        transition: 300ms;
     }
 
     &__header {
@@ -205,7 +204,10 @@
         }
 
         &--actived .games-search__header {
-            border: 1px solid var(--highlight);
+            border-top: 1px solid var(--highlight);
+            border-right: 0;
+            border-bottom: 1px solid var(--highlight);
+            border-left: 0;
             border-radius: 5px 5px 0 0 ;
         }
 
