--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
@@ -14,83 +14,77 @@
         </div>
     </div>
 </div>
-<div class="jogos-destaque" *ngIf="jogos.size > 0">
-    <div class="slider-header">
-        {{ 'geral.jogosAoVivo' | translate }}
-        <nav>
-            <div class="scroll-button scroll-left" id="cassino-left"
-                (click)="owlCar.prev()">
-                <i class="fa-solid fa-angle-left"></i>
-            </div>
-            <div class="scroll-button scroll-right" id="cassino-right"
-                (click)="owlCar.next()">
-                <i class="fa-solid fa-angle-right"></i>
-            </div>
-        </nav>
+<div class="jogos-aovivo" *ngIf="campeonatos.size && !showLoadingIndicator">
+    <div class="widgets-header">
+        <div class="widgets-title">
+            {{ 'geral.jogosAoVivo' | translate }}
+        </div>
+        <a routerLink="/esportes/live/jogos">
+            {{'geral.verTodos' | translate}} <i class="fa fa-solid fa-angle-right ml-2"></i>
+        </a>
     </div>
-    <owl-carousel-o class="jogos" [options]="customOptions" (dragging)="isDragging = $event.dragging;" #owlCar>
-        <ng-container *ngFor="let jogoDestaque of jogos | keyvalue; trackBy: trackById">
-            <ng-template carouselSlide [id]="jogoDestaque.value._id" [width]="widthCard">
-                <div class="jogo-destaque">
-                    <div class="header">
-                        <span>
-                            {{ jogoDestaque.value.campeonato?.nome }}
-                        </span>
-                        <span class="info-minutos">
-                            <label>Ao vivo</label>
-                            {{ jogoDestaque.value.info?.minutos }}'
-                        </span>
-                    </div>
-
-                    <div class="jogo">
-                        <div class="time1">
-                            <span class="text-center" title="{{ jogoDestaque.value.time_a_nome }}">{{ jogoDestaque.value.time_a_nome }}</span>
-                            <span *ngIf="jogoDestaque.value.time_a_img; else defaulImage" class="escudo">
-                                <img src="https://cdn.wee.bet/img/times/m/{{jogoDestaque.value.time_a_img}}.png" size="s" class="escudo-img">
-                            </span>
-                            <ng-template #defaulImage>
-                                <span class="escudo">
-                                    <img src="https://cdn.wee.bet/img/times/m/default.png" size="s" class="escudo-img">
-                                </span>
-                            </ng-template>
-                            <div class="placar">
-                                {{ jogoDestaque.value.info?.time_a_resultado }}
+    <div class="wrap-sticky">
+        <div class="campeonato" *ngFor="let campeonato of campeonatos | keyvalue:reOrder; trackBy: trackById">
+            <ng-container *ngIf="campeonatoPermitido(campeonato.value._id)">
+                <div class="header">
+                    <span class="flag-icon flag-icon-{{campeonato.value.regiao_sigla}} flag-icon-squared"></span>
+                    <span class="campeonato-nome">{{campeonato.value.nome}}</span>
+                </div>
+                <div class="jogos">
+                    <div class="jogo" *ngFor="let jogo of campeonato.value.jogos | keyvalue; trackBy: trackById">
+                        <div class="tempo-box">
+                            <div class="aovivo-label">
+                                <i class="fa fa-circle blink_me"></i> {{'geral.aoVivo' | translate | uppercase}}
+                            </div>
+                            <div class="tempo">
+                                {{jogo.value.info.minutos}}'
                             </div>
                         </div>
-                        <span class="separador-times">-</span>
-                        <div class="time2">
-                            <div class="placar">
-                                {{ jogoDestaque.value.info?.time_b_resultado }}
+                        <div class="times-placar">
+                            <div class="time time-a">
+                                <div class="time-a-nome">
+                                    <ng-container *ngIf="jogo.value.time_a_img; else defaulImageA" class="escudo">
+                                        <img src="https://cdn.wee.bet/img/times/s/{{jogo.value.time_a_img}}.png" class="escudo-img" size="s">
+                                    </ng-container>
+                                    <ng-template #defaulImageA class="escudo">
+                                        <img src="https://cdn.wee.bet/img/times/s/default.png" class="escudo-img">
+                                    </ng-template>
+                                    {{jogo.value.time_a_nome}}
+                                </div>
+                                <div class="placar time-a-placar">{{jogo.value.info.time_a_resultado}}</div>
                             </div>
-                            <span *ngIf="jogoDestaque.value.time_a_img; else defaulImage" class="escudo">
-                                <img src="https://cdn.wee.bet/img/times/m/{{jogoDestaque.value.time_b_img}}.png" size="s" class="escudo-img">
-                            </span>
-                            <ng-template #defaulImage>
-                                <span class="escudo">
-                                    <img src="https://cdn.wee.bet/img/times/m/default.png" size="s" class="escudo-img">
-                                </span>
-                            </ng-template>
-                            <span class="text-center flex-grow-1" title="{{ jogoDestaque.value.time_b_nome }}">{{ jogoDestaque.value.time_b_nome }}</span>
+                            <div class="time time-b">
+                                <div class="time-b-nome">
+                                    <span *ngIf="jogo.value.time_b_img; else defaulImageB" class="escudo">
+                                        <img src="https://cdn.wee.bet/img/times/s/{{jogo.value.time_b_img}}.png" class="escudo-img" size="s">
+                                    </span>
+                                    <ng-template #defaulImageB class="escudo">
+                                        <img src="https://cdn.wee.bet/img/times/s/default.png" class="escudo-img">
+                                    </ng-template>
+                                    {{jogo.value.time_b_nome}}
+                                </div>
+                                <div class="placar time-b-placar">{{jogo.value.info.time_b_resultado}}</div>
+                            </div>
                         </div>
-                    </div>
+                        <div class="cotacoes">
+                            <ng-container *ngFor="let cotacao of cotacoesPorTipo(jogo.value.cotacoes)">
+                                <div class="cotacao disabled" *ngIf="cotacao.lock || !cotacaoPermitida(cotacao.valorFinal); else noLock">
+                                    <label>{{ cotacao.nome }}</label>
+                                    <span><i class="fa fa-lock"></i></span>
+                                </div>
 
-                    <div class="jogo-destaque-odds">
-                        <div *ngFor="let cotacao of cotacoesPorTipo(jogoDestaque.value.cotacoes)"
-                            [ngClass]="{'odd-disabled': !cotacaoPermitida(cotacao.valorFinal)}"
-                            class="jogo-destaque-odd {{ itensSelecionados[jogoDestaque.value._id + '_'+ cotacao.chave] ? 'selecionado' : ''}}"
-                            (click)="cotacaoPermitida(cotacao.valorFinal) && addCotacao($event, jogoDestaque.value, cotacao)"
-                        >
-                            {{ cotacao.nome }}
-                            <ng-container *ngIf="cotacao.lock || !cotacaoPermitida(cotacao.valorFinal); else cotacaoBloqueada">
-                                <span class="cotacao"><i class="fa fa-lock"></i></span>
+                                <ng-template #noLock>
+                                    <div class="cotacao"
+                                    (click)="addCotacao(jogo.value, cotacao); $event.stopPropagation()" [ngClass]="{'selecionado': oddSelecionada(jogo.value._id, cotacao.chave)}">
+                                        <label>{{ cotacao.nome }}</label>
+                                        <span>{{ cotacao.valorFinal}}</span>
+                                    </div>
+                                </ng-template>
                             </ng-container>
-                            <ng-template #cotacaoBloqueada>
-                                <span class="cotacao" >{{ cotacao.valorFinal }}</span>
-                            </ng-template>
                         </div>
                     </div>
                 </div>
-            </ng-template>
-        </ng-container>
-    </owl-carousel-o>
+            </ng-container>
+        </div>
+    </div>
 </div>
