--- a/src/app/home/bilhete/bilhete.component.css
+++ b/src/app/home/bilhete/bilhete.component.css
@@ -498,6 +498,7 @@ h4 {
         right: 10px;
         border-radius: 5px;
         overflow: hidden;
+        position: fixed;
     }
 
     section.pre-bilhete {
