fiz altura e correção rotas

--- a/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
+++ b/src/app/home/widgets/cards-modalidade/cards-modalidade.component.html
@@ -4,7 +4,7 @@
             <a routerLink="/esportes">Esporte</a>
         </li>
         <li class="bg-esportes-aovivo">
-            <a routerLink="/esportes/live">
+            <a routerLink="/live/all">
                 Esporte
                 <span>Ao Vivo</span>
             </a>
