--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
@@ -19,7 +19,7 @@
         <div class="widgets-title">
             {{ 'geral.jogosAoVivo' | translate }}
         </div>
-        <a routerLink="/esportes/live/jogos">
+        <a routerLink="/live/all">
             {{'geral.verTodos' | translate}} <i class="fa fa-solid fa-angle-right ml-2"></i>
         </a>
     </div>
