--- a/src/app/shared/layout/app-layouts/sport-layout.component.css
+++ b/src/app/shared/layout/app-layouts/sport-layout.component.css
@@ -12,6 +12,6 @@
     .collapsed, .uncollapsed {
         width: 100%;
         max-width: 100%;
-        padding: 0;
+        padding: 0 5px;
     }
 }
