--- a/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.css
+++ b/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.css
@@ -16,6 +16,7 @@
 .provider-card--filter {
     width: 100%;
     min-height: 100%;
+    max-width: 129px;
 }
 
 .provider-card:hover {
@@ -28,7 +29,7 @@
 }
 
 .provider-card__image{
-    width: 100%;
+    width: auto;
     height: auto;
 }
 
