--- a/src/app/home/widgets/cassino/cassino.component.html
+++ b/src/app/home/widgets/cassino/cassino.component.html
@@ -50,7 +50,7 @@
                 </ng-container>
                 <div class="info-game">
                     <p>{{game.gameName}}</p>
-                    <label>{{game.fornecedor}}</label>
+                    <label>{{game.fornecedorExibicao}}</label>
                 </div>
                 <div class="game-tile-buttons">
                     <ng-container *ngIf="!isDemo">
