fix home e altura de components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home-container">
+<div class="home-container" [ngStyle]="{'max-height': 'calc(100vh - ' +headerHeight+'px)'}">
     <app-banners pagina="home"></app-banners>
 
     <app-cards-modalidade class="widgets"></app-cards-modalidade>
