--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -16,7 +16,7 @@
 
         <div class="info-jogo">
             <h4 class="title">{{'footer.jogueComResponsabilidade' | translate}}</h4>
-            <div class="icons">
+            <div class="icons" *ngIf="slug == 'ragnar.bet'">
                 <iframe
                     src="https://licensing.gaming-curacao.com/validator/?lh=3e6ea9b3c638911372d6c78c18ed6ca2&template=tseal"
                     width="150" height="50" style="border:none;"></iframe>
