--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -1,6 +1,6 @@
 .wall-container {
     width: 100%;
-    height: calc(100% - 40px);
+    height: 100%;
     overflow: auto;
     scroll-behavior: smooth;
 
