--- a/src/app/home/widgets/cassino/cassino.component.css
+++ b/src/app/home/widgets/cassino/cassino.component.css
@@ -1,6 +1,6 @@
 .bloco {
     position: relative;
-    padding: 5px 10px;
+    padding: 0 10px 30px;
     margin: 0 auto;
     flex: 1;
     width: 100%;
@@ -19,6 +19,7 @@
     font-size: 18px;
     color: var(--foreground-header);
     flex-grow: 1;
+    padding: 5px 0 10px;
 }
 
 .bloco .titulo nav {
@@ -318,7 +319,11 @@
     }
 
     .bloco {
-        padding: 10px;
+        padding: 0 10px 24px;
+    }
+
+    .bloco .titulo {
+        padding: 0 0 10px;
     }
 
     .game-list {
