ajustes espacamentos e tamnaho de fonts home

--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
@@ -118,7 +118,6 @@ owl-carousel-o {
 }
 
 .jogos-destaque {
-    margin-top: 15px;
     display: flex;
     flex-direction: column;
     overflow-x: scroll;
@@ -275,6 +274,7 @@ span.escudo img {
 
     .slider-header {
         padding: 0 0 10px;
+        font-size: 16px;
     }
 
     .menu-camp-destaques {
@@ -288,7 +288,7 @@ span.escudo img {
     }
 
     .jogos-destaque {
-        margin-top: 5px;
+        margin-top: 0;
     }
 }
 
