--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.css
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.css
@@ -183,6 +183,7 @@
 
     .widgets-header {
         padding: 0 0 10px;
+        font-size: 16px;
     }
 
     .loading-listagem .slider .itens .content {
