--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.css
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     font-weight: 600;
-    padding: 10px 0;
+    padding: 5px 0 10px;
     align-items: center;
     text-align: left;
     font-size: 18px;
