--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
@@ -23,7 +23,7 @@ owl-carousel-o {
 .slider-header {
     display: flex;
     font-weight: 600;
-    padding: 10px 0;
+    padding: 5px 0 10px;
     align-items: center;
     text-align: left;
     font-size: 18px;
